<resources>
   <string name="app_name">L\'apuntador del teatre</string>
   <string name="titol">L\'apuntador</string>
   <string name="titol_configuracio">configuració</string>
   <string name="titol_seleccio">Selecció de fragments</string>
   <string name="blanc" translatable="false"> </string>
   <string name="obra_sencera">obra sencera</string>
   <string name="boto_configurar">Configurar</string>
   <string name="boto_sortir">Sortir</string>

   <string name="titol_actors">actors</string>
   <string name="titol_veus">veus</string>
   <string name="titol_registre">registre</string>
   <string name="titol_velocitat">velocitat</string>
   <string name="titol_seleccio_idioma">Selecció d\'idioma:</string>
   <string name="boto_desar">Desar</string>
   <string name="boto_instruccions">Instruccions</string>
   <string name="instruccions"><b>Selecció dels paràmetres per a cada actor:</b>
      \n<b>veu:</b> per a cada actor cal seleccionar una de les veus disponibles
      \n<b>registre:</b> greu:<i>valor petit</i>. agut:<i>valor gran</i>
      \n<b>velocitat:</b> lenta:<i>valor petit</i>. ràpida:<i>valor gran</i>\n
      \n<b>nota:</b> Els arxius corresponents als fragments de l\'obra per a cada actor i l\'arxiu de l\'obra sencera
      s\'han de desar a una carpeta accessible, per exemple, \'Documents\'\n
      \n<b>El nom dels arxius</b> <i>fragments</i> ha de tenir el següent format:
      \n- <b><u>nomDeLobra</u>-<u>nomDeLactor</u>-<u>99</u>.txt</b>
      \n(el número_de_seqüència_de_fragment: de 01 a 99 per a cada actor)\n
      \n<b>El format de cada arxiu</b> (fragments per a cada actor) és:
      \n<b>- text de l\'actor:</b> <u>nomDeLactor: </u> A continuació, el text en una única línia. Pot contenir, entre parèntesi, elements de situació narrativa.
      \n<b>- text del narrador i situació:</b> Qualsevol text que no comenci amb el nom d\'un actor seguit de dos punts (:)
   </string>

   <string name="inici_assaig">Hola %s, ja pots començar</string>
   <string name="encert">"encert: %d%%\ntext: %s\nrebut: %s"</string>
   <string name="escoltant">escoltant …</string>
   <string name="error_audio">Error d\'àudio</string>
   <string name="error_no_escolto_res">No he sentit cap veu</string>
   <string name="error_desconegut" translatable="false">Error: %d</string>
   <string name="error_llegint_arxiu">No he pogut obrir el fitxer %s</string>
   <string name="idioma_no_soportat">TTS: Idioma no soportat</string>
   <string name="error_inici_TTS">TTS: Inicialització fallida</string>
   <string name="error_reconeixement_no_disponible">Error: reconeixement de veu no disponible</string>
   <string name="titol_play">toca</string>
</resources>
